<resources>
    <string name="app_name">IntelliTravel</string>
    <string name="search">Search</string>
    <string name="map">Map</string>
    <string name="my_list">My List</string>
    <string name="country_details">Country Details</string>
    <string name="suggested_countries">Suggested Countries</string>
    <string name="country_info">Country Info:</string>

    <string-array name="country_names_list">
        <item>Canada</item>
        <item>USA</item>
        <item>Japan</item>
        <item>Germany</item>
        <item>UK</item>
        <item>Brazil</item>
    </string-array>
    <string name="country_name">Country</string>
    <string name="emergency_number">Emergency Number: 9–1–1</string>
    <string name="official_languages">Official Languages: Unknown</string>
    <string name="travel_advisory">Travel Advisory Status: Green</string>
    <string name="notable_disease_presence">Notable Diseases Present:</string>
    <string name="gov_link">For More Information Visit the Link Below:</string>

    <string name="none">None</string>
    <string name="covid_info">COVID Information:</string>
    <string name="covid_cases">Active COVID cases: 2730</string>
    <string name="covid_regulations">ArriveCAN registration</string>
    <string name="high_season">High season: May - September</string>
    <string name="low_season">Low season: October - April</string>
    <string name="airport_daily_flights">Daily flights outgoing: 23</string>
    <string-array name="airports">
        <item>YVR</item>
        <item>YOW</item>
        <item>YYC</item>
        <item>YYZ</item>
        <item>YUL</item>
        <item>YEG</item>
    </string-array>

    <string name="country">Country</string>
    <string name="country_description">Insert country description</string>
    <string name="flag_image">Image of the country\'s flag</string>
    <string-array name="descriptions">
        <item>This is Canada.</item>
        <item>This is USA.</item>
        <item>This is Japan.</item>
        <item>This is Germany.</item>
        <item>This is UK.</item>
        <item>This is Brazil.</item>
    </string-array>
    <string name="suggestedCountriesTitle">Suggested Countries</string>
    <string name="furtherDetails">Further Details</string>

    <string name="settings_main">Settings</string>
    <string name="test_string">Languages Spoken:\n- English\n- French\nMinimum Travel Advisory Status:\n- Green\n- Yellow\n- Orange\n- Red\nAcceptable Disease Risks:\n- None (Default)\n- Yellow Fever\n- Malaria\nCOVID Risk:\n- Low\n- Medium\n- High</string>
    <string-array name="search_settings">
        <item>Languages Spoken:</item>
        <item>- English</item>
        <item>- French</item>
        <item>Minimum Travel Advisory Status:</item>
        <item>- Green</item>
        <item>- Yellow</item>
        <item>- Orange</item>
        <item>- Red</item>
        <item>Acceptable Disease Risks:</item>
        <item>- None (Default)</item>
        <item>- Yellow Fever</item>
        <item>- Malaria</item>
        <item>COVID Risk:</item>
        <item>- Low</item>
        <item>- Medium</item>
        <item>- High</item>
    </string-array>
    <string name="map_description">\"google map\"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_favourites_yet">No favourites yet! Try searching for a country.</string>
    <string name="capital">Capital City: Unknown</string>

    <string name="calling">Calling Code: Unknown</string>
    <string name="riskLevel">Risk Level: Unknown</string>
    <string name="riskDescription">Description: N/A</string>
    <string name="currency">Currency: Unknown</string>
    <string name="travel">Best Time to Travel: Unknown</string>
    <string name="link">https://travel.gc.ca/travelling/advisories</string>
    <string name="region">Unknown</string>




</resources>