<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="false"
    android:layout_gravity="center_horizontal"
    tools:context=".CountryViewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="230dp" />

        <LinearLayout
            android:id="@+id/basic_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/country_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/country_name" />

            <TextView
                android:id="@+id/emergency_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emergency_number" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/language_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/official_languages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/official_languages" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/travel_advisory_status_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/travel_advisory_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/travel_advisory" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/notable_diseases_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/diseases_present"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notable_disease_presence" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/covid_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/covid_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/covid_info" />

            <TextView
                android:id="@+id/covid_case_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/covid_cases" />

            <TextView
                android:id="@+id/covid_regulations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/covid_regulations" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/season_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/high_season"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/high_season" />

            <TextView
                android:id="@+id/low_season"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/low_season" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/airport_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/airport_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/airport_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/airport_daily_flights" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>