<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />

<!--    <fragment-->
<!--        android:id="@+id/nav_host_fragment_activity_country_details"-->
<!--        android:name="androidx.navigation.fragment.NavHostFragment"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        app:defaultNavHost="true"-->
<!--        app:layout_constraintBottom_toTopOf="@id/nav_view"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginBottom="48dp"
        app:layout_constraintBottom_toTopOf="@id/nav_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            app:columnCount="1"
            app:orientation="vertical">

            <com.google.android.gms.maps.MapView
                android:id="@+id/map_sub_view"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/map" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/favourite_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:clickable="true"
                    android:onClick="addToFavourites"
                    android:contentDescription="@string/my_list"
                    android:src="@drawable/ic_baseline_favorite_24"
                    app:backgroundTint="@color/white"
                    app:tint="#ff7fa5" />

                <TextView
                    android:id="@+id/country_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="@string/country_name"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

<!--                <TextView-->
<!--                    android:id="@+id/country_emerg_number"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_below="@id/country_name"-->
<!--                    android:layout_alignParentBottom="true"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:text="@string/emergency_number"-->
<!--                    android:textAlignment="center"-->
<!--                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />-->
                <TextView
                    android:id="@+id/region"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/country_name"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center"
                    android:text="@string/region"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            </RelativeLayout>

            <TextView
                android:id="@+id/official_languages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/official_languages"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/capital_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/capital"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/calling_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/calling"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />


<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:orientation="vertical">-->

<!--                <TextView-->
<!--                    android:id="@+id/covid_info_title"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_margin="10dp"-->
<!--                    android:text="@string/covid_info"-->
<!--                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />-->

<!--                <TextView-->
<!--                    android:id="@+id/covid_info_active_cases"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="30dp"-->
<!--                    android:layout_marginEnd="10dp"-->
<!--                    android:text="@string/covid_cases"-->
<!--                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />-->

<!--                <TextView-->
<!--                    android:id="@+id/covid_info_regulations"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginStart="30dp"-->
<!--                    android:layout_marginEnd="10dp"-->
<!--                    android:text="@string/covid_regulations"-->
<!--                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />-->
<!--            </LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/covid_info_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Risk:"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <TextView
                    android:id="@+id/risk_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/riskLevel"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/risk_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/riskDescription"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </LinearLayout>




<!--            <TextView-->
<!--                android:id="@+id/travel_advisory"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="10dp"-->
<!--                android:text="@string/travel_advisory"-->
<!--                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/notable_disease_presence"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/notable_disease_presence"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <TextView
                    android:id="@+id/disease_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:text="No outbreaks" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/currency"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                <TextView
                    android:id="@+id/bestTimeToTravel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/travel"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/govLinkText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/gov_link"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

                <TextView
                    android:id="@+id/govLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    android:text="@string/link"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

            </LinearLayout>





<!--                <TextView-->
<!--                    android:id="@+id/high_season"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_margin="10dp"-->
<!--                    android:text="@string/high_season"-->
<!--                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />-->

<!--                <TextView-->
<!--                    android:id="@+id/low_season"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_margin="10dp"-->
<!--                    android:text="@string/low_season"-->
<!--                    android:textAppearance="@style/TextAppearance.AppCompat.Body2" />-->
            </LinearLayout>

<!--            <TextView-->
<!--                android:id="@+id/airports"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="10dp"-->
<!--                android:text="@string/airport_daily_flights"-->
<!--                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />-->

        </androidx.gridlayout.widget.GridLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>